# engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run.sh
inc/: engine.hpp  event.hpp  renderer.hpp  shader.hpp  shaders.hpp  texture.hpp  window.hpp
src/: engine.cpp  main.cpp  renderer.cpp  shader.cpp  texture.cpp  window.cpp
src/shaders/: example.frag  example.vert
